--- a/00_inicio.html
+++ b/00_inicio.html
@@ -15,6 +15,7 @@
             <li><a href="01_about.html">about</a></li>
             <li><a href="02_portfolio.html">portfolio</a></li>
             <li><a href="03_contacto.html">contact</a></li>
+            <li><a href="04_carrousel.html">carroussel</a></li>
         </ul>
     </nav>
 
