cambio 03: modificaciones menu e icono en la ventana

--- a/04_carrousel.html
+++ b/04_carrousel.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bea Andrés Design</title>
+    <link rel="icon" href="./img/00_otros/Recurso 6.png" type="image/x-icon">
     <link rel="stylesheet" href="./00_menu.css">
     <link rel="stylesheet" href="./00_estilos.css">
 </head>
 <body>
     <!--BARRA-->
     <style>p{display:inline}</style>
-    <div class="menu" >
+    <nav class="menu" id="menu-container">
         <ul>
-            <li><a href="00_inicio.html">inicio</a></li>
             <li><a href="01_about.html">about</a></li>
             <li><a href="02_portfolio.html">portfolio</a></li>
-            <li><a href="03_contacto.html">contact</a></li>        
+            <li><a href="03_contacto.html">contact</a></li>
+            <li><a href="04_carrousel.html">sketches</a></li>
+
+            <li class="icono">
+                <a href="00_inicio.html">
+                    <img src="./img/00_otros/Recurso 7.png" alt="">
+                </a>
+            </li>
+        
         </ul>
-    </div>
+    </nav>
 
     <!--CONTENIDO-->
     <div class="carousel">
@@ -32,8 +40,8 @@
                 <img src="./img/02_indice/02_perfume_filtro.png" alt="Imagen 3">
             </div>
         </div>
-        <button class="prev">&#10094;</button>
-        <button class="next">&#10095;</button>
+        <button class="prev"><img src="./img/00_otros/boton_izquierda.png" alt=""></button>
+        <button class="next"><img src="./img/00_otros/boton_derecha.png" alt=""></button>
     </div>
 
 
