--- a/00_inicio.html
+++ b/00_inicio.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bea Andrés Design</title>
+    <link rel="icon" href="./img/00_otros/Recurso 6.png" type="image/x-icon">
     <link rel="stylesheet" href="./00_menu.css">
     <link rel="stylesheet" href="./00_estilos.css">
 </head>
 <body class="inicio">
     <style>p{display:inline}</style>
-    <nav class="menu">
+    <nav class="menu" id="menu-container">
         <ul>
-            <li><a href="00_inicio.html">inicio</a></li>
             <li><a href="01_about.html">about</a></li>
             <li><a href="02_portfolio.html">portfolio</a></li>
             <li><a href="03_contacto.html">contact</a></li>
-            <li><a href="04_carrousel.html">carroussel</a></li>
+            <li><a href="04_carrousel.html">sketches</a></li>
+
+            <li class="icono">
+                <a href="00_inicio.html">
+                    <img src="./img/00_otros/Recurso 7.png" alt="">
+                </a>
+            </li>
+        
         </ul>
     </nav>
 
