--- a/04_carrousel.html
+++ b/04_carrousel.html
@@ -31,14 +31,21 @@
     <div class="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./img/03_portfolio_01_maquillaje/01_maquillaje_00_.png" alt="Imagen 1">
+                <img src="./img/04_carroussel/01.jpg" alt="Imagen 1">
             </div>
             <div class="carousel-item">
-                <img src="./img/03_portfolio_03_tacon/03_tacones_boceto.jpeg" alt="Imagen 2">
+                <img src="./img/04_carroussel/02.jpg" alt="Imagen 2">
             </div>
             <div class="carousel-item">
-                <img src="./img/02_indice/02_perfume_filtro.png" alt="Imagen 3">
+                <img src="./img/04_carroussel/04.jpg" alt="Imagen 3">
             </div>
+            <div class="carousel-item">
+                <img src="./img/04_carroussel/05.jpg" alt="Imagen 3">
+            </div>
+            <div class="carousel-item">
+                <img src="./img/04_carroussel/07.jpg" alt="Imagen 3">
+            </div>
+
         </div>
         <button class="prev"><img src="./img/00_otros/boton_izquierda.png" alt=""></button>
         <button class="next"><img src="./img/00_otros/boton_derecha.png" alt=""></button>
