--- a/01_about.html
+++ b/01_about.html
@@ -33,6 +33,12 @@
         <div class="subtitulo_about">¡Hola! Mi nombre es Bea y soy diseñadora de producto junior en Madrid. </div>
         <div class="texto_about">Considero el diseño como una herramienta fundamental con la que crear  soluciones estéticas y funcionales para resolver diferentes problemas. Me apasiona el proceso creativo de cada proyecto y como explorar e  investigar sobre diferentes temas me hace comprender con profundidad  las necesidades de las personas para las que diseño.</div>
     </div>
+    <div class="contenedor_foto">
+        <div class="contenido_foto">
+            <img src="./img/01_principal/foto_linkedin.jpg" alt="">
+        </div>
+    </div>
+    
     
 
     <script src="00_inicio.js"></script>
