--- a/02_portfolio_03_besoté.html
+++ b/02_portfolio_03_besoté.html
@@ -52,7 +52,9 @@
     </div>
 
     <div class="titulo_prototipo">prototipo</div>
-    <div class="texto_prototipo">////</div>
+    <div class="contenedor-texto">
+        <div class="texto">Se realizó un prototipo utilizando diferentes técnicas de fabricación como fresado, prensado de madera, torneado, impresión 3D de resina, caucho y filamento.</div>
+    </div>
 
     <div class="contenedor_pequeño">
         <div class="imagen_contenido">
