--- a/02_portfolio_04_atril.html
+++ b/02_portfolio_04_atril.html
@@ -48,7 +48,14 @@
     </div>
 
     <div class="titulo_prototipo">personalización.</div>
-    <div class="texto_prototipo">////</div>
+    <div class="contenedor-texto">
+        <div class="texto"><b>01. Tratamiento</b></div>
+        <div class="texto">Dior Prestige</div>
+        <div class="texto"><b>02. Perfumería</b></div>
+        <div class="texto">Miss Dior</div>
+        <div class="texto"><b>03. Maquillaje</b></div>
+        <div class="texto">Glowmania</div>
+    </div>
 
     <div class="contenedor_pequeño">
         <div class="imagen_contenido">
@@ -60,7 +67,9 @@
     </div>
 
     <div class="titulo_prototipo">prototipo.</div>
-    <div class="texto_prototipo">////</div>
+    <div class="contenedor-texto">
+        <div class="texto">Se realizó un protoripo a escala 1:3 utilizando listones de madera y lona publicitaria facilitada por la marca.</div>
+    </div>
 
     <div class="contenedor_pequeño">
         <div class="imagen_contenido">
