cambio09___retoques por errores

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="04_carrousel.html">sketches</a></li>
 
             <li class="icono">
-                <a href="00_inicio.html">
+                <a href="index.html">
                     <img src="./img/00_otros/Recurso 7.png" alt="">
                 </a>
             </li>
